--- a/other.html
+++ b/other.html
@@ -47,7 +47,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
-         
+              <li class="nav-item"><a class="nav-links" href="index.html">Mens Section</a></li>
             <form class="d-flex" role="search">
               <input class="mobile form-control me-2" type="search" placeholder="serach here">
               <button class="mobile btn btn-outline-light search" type="submit">search</button>
