--- a/other.html
+++ b/other.html
@@ -60,6 +60,8 @@
     
 <section class="Sneak">
   <center>
+    <a href="link.html"><button class="btn btn-dark  btn-lg download-button" type="button">
+      Final-link </button></a>
     <h1>Trending Sneakers for <b>Womens</b> </h1>
   <img src="women1.jpg" alt="">
   <a href="https://amzn.to/3yPPMJz"><button class="btn btn-dark  btn-lg download-button" id="bt"  type="button">
@@ -77,7 +79,7 @@
   <section id="cta">
 
     <p>You will find here the best sneakers for Men and Women on Amazon.</p>
-    <a href=""><button class="btn btn-dark  btn-lg download-button" type="button">
+    <a href="link.html"><button class="btn btn-dark  btn-lg download-button" type="button">
       Final-link </button></a>
    <a href="#title"><button class="btn btn-outline-light btn-lg download-button" type="button">
       UP</button></a> 
