--- a/other.html
+++ b/other.html
@@ -26,7 +26,8 @@
 
   <!-- favicon -->
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1435190110820461"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
